k8s/templates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
    kompose.image-pull-secret: ghcr-pull-secret
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
        kompose.image-pull-secret: ghcr-pull-secret
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_URL
                  name: env-prod-secrets
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: env-prod-secrets
            - name: PORT
              value: "80"
            - name: WASP_WEB_CLIENT_URL
              value: https://cookwherever.com
          image: ghcr.io/cookwherever/backend@sha256:3df663f9fb6cab039887a5e82356fd4d12618883cddb1d0973874c7f716b7b31
          name: backend
          ports:
            - containerPort: 80
          resources: {}
      imagePullSecrets:
        - name: ghcr-pull-secret
      restartPolicy: Always
status: {}
