k8s/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
    kompose.image-pull-secret: ghcr-pull-secret
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
        kompose.image-pull-secret: ghcr-pull-secret
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: ghcr.io/cookwherever/frontend@sha256:d1bee2517a58cbbf04588d3c5f1d39249c9062b55cb46943204bf2bb366070cd
          name: frontend
          ports:
            - containerPort: 80
          resources: {}
      imagePullSecrets:
        - name: ghcr-pull-secret
      restartPolicy: Always
status: {}
