k8s/templates/kratos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: kratos
  name: kratos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kratos
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: kratos
    spec:
      containers:
        - args:
            - serve
            - -c
            - /config/kratos/config.yaml
            - --dev
            - --watch-courier
          image: oryd/kratos:v0.9.0-alpha.3
          name: kratos
          ports:
            - containerPort: 4433
            - containerPort: 4434
          resources: {}
          volumeMounts:
            - mountPath: /config/kratos
              name: kratos-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: kratos-cm0
          name: kratos-cm0
status: {}
