k8s/templates/kratos-migrate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kratos-migrate
  name: kratos-migrate
spec:
  containers:
    - args:
        - -c
        - /config/kratos/config.yaml
        - migrate
        - sql
        - -e
        - --yes
      image: oryd/kratos:v0.9.0-alpha.3
      name: kratos-migrate
      resources: {}
      volumeMounts:
        - mountPath: /config/kratos
          name: kratos-migrate-cm0
  restartPolicy: OnFailure
  volumes:
    - configMap:
        name: kratos-migrate-cm0
      name: kratos-migrate-cm0
status: {}
