k8s/templates/mailslurper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mailslurper
  name: mailslurper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mailslurper
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: mailslurper
    spec:
      containers:
        - image: oryd/mailslurper:latest-smtps
          name: mailslurper
          ports:
            - containerPort: 4436
            - containerPort: 4437
          resources: {}
      restartPolicy: Always
status: {}
