k8s/templates/oathkeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: oathkeeper
  name: oathkeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: oathkeeper
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: oathkeeper
    spec:
      containers:
        - args:
            - --config
            - /config/oathkeeper/config.yaml
            - serve
          image: oryd/oathkeeper:v0.38
          name: oathkeeper
          ports:
            - containerPort: 4455
            - containerPort: 4456
          resources: {}
          volumeMounts:
            - mountPath: /config/oathkeeper
              name: oathkeeper-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: oathkeeper-cm0
          name: oathkeeper-cm0
status: {}
