k8s/templates/wiki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert -c -o k8s
    kompose.image-pull-secret: ghcr-pull-secret
    kompose.service.expose: cookwherever.com
    kompose.service.expose.tls-secret: cookwherever-com-tls
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: wiki
  name: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wiki
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert -c -o k8s
        kompose.image-pull-secret: ghcr-pull-secret
        kompose.service.expose: cookwherever.com
        kompose.service.expose.tls-secret: cookwherever-com-tls
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: wiki
    spec:
      containers:
        - image: ghcr.io/cookwherever/wiki@sha256:9e333b3f31b5047e8a7143837f5d712ea94e8d963a3070cd56784243b523554f
          name: wiki
          ports:
            - containerPort: 80
          resources: {}
      imagePullSecrets:
        - name: ghcr-pull-secret
      restartPolicy: Always
status: {}
