k8s/templates/hasura-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert -c -o k8s
    kompose.service.expose: login.cookwherever.com
    kompose.service.expose.tls-secret: cookwherever-com-tls
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: hasura-auth
  name: hasura-auth
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 4000
  selector:
    io.kompose.service: hasura-auth
status:
  loadBalancer: {}
