k8s/templates/kratos-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert --volumes=configMap -c -o k8s
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: kratos
  name: kratos
spec:
  ports:
    - name: "4433"
      port: 4433
      targetPort: 4433
    - name: "4434"
      port: 4434
      targetPort: 4434
  selector:
    io.kompose.service: kratos
status:
  loadBalancer: {}
