k8s/templates/mailslurper-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert -c -o k8s
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mailslurper
  name: mailslurper
spec:
  ports:
    - name: "4436"
      port: 4436
      targetPort: 4436
    - name: "4437"
      port: 4437
      targetPort: 4437
  selector:
    io.kompose.service: mailslurper
status:
  loadBalancer: {}
